[CR/LF]
===============================================================================
Ver 1.01dev - 2024-09-22
===============================================================================

- Update: stop reloading CR3 in call_v86.asm.
- [TOWNS] Update: int 21h/AX=2511h patch for TownsOS SYSINIT bug.

===============================================================================
Ver 1.00 - 2024-09-20
===============================================================================

- Support non VCPI enviroment.
- Add memory management system.
- Add command line options: "-maxreal, -minreal, -callbuf"
- [TOWNS] Support TownsOS (not require XMS/VCPI).
- [PC-98] Update memory mapping code.
- Fix: Improper management of free linear address (int 21h 48h/250Ah and more).
- Fix: In V86, 32bit interrupt will crash if ESP's upper 16 bits are non-zero.
- Fix: If called init_XXX_16, will be called end_XXX_16 when exiting V86 mode.
- Fix: Do not work int 21h, AH=56h (rename file).
- [TOWNS] Fix: CoCo initialization miss. This fix stabilizes TMENU.

===============================================================================
Ver 0.90 - 2023-12-28
===============================================================================

- All "call V86" routines have been rewritten.
	- Support stack copy for int 21h AX=250Dh/AX=2510h
	- Fix: Carry flags that should originally be saved may change.
- Support for building with Microsoft LINK.EXE.
- Fix: very rare error in heap memory calculation for exp file.
- Fix: using -vv option will cause a hang up if bits 16-31 of ebx is not 0.
- Update: tools. Newly includes flatlink and NASM 2.16.01.
- Update: int 21h, ah=4ah for Open Watcom's EXP file.
- Update: support int 21h, AX=250Dh stack parameter for 32bit routine.
- Update: set EXP file name to ENV command name.
- Update: source file names are now easier to understand.
- Update: rewrite register dump and cpu fault routines (and fix bugs).