@@ -4,6 +4,7 @@ Ver 1.01dev - 2024-09-22
 ===============================================================================
 
 - Update: stop reloading CR3 in call_v86.asm.
+- Fix: title is not displayed when using the "-vv" option.
 - [TOWNS] Update: int 21h/AX=2511h patch for TownsOS SYSINIT bug.
 
 ===============================================================================
